# pomodoro_py

./: LICENSE  README.md  pyproject.toml
pomodoro_py/: cli_timer.py  main.py  notifications.py  settings.py  stats.py
tests/: run_tests.py  test_notifications.py  test_settings.py  test_stats.py  test_timer.py
