[project]
name = "pomodoro-py"
version = "0.1.0"
description = ""
authors = [
    {name = "renancunha",email = "renancunhafonseca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "osascript (>=2020.12.3,<2021.0.0)"
]

[tool.poetry.scripts]
pomo = "pomodoro_py.main:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
